# cmake_lab

./: README.md
src/: CMakeLists.txt  bar.cpp  bar.h  foo.cpp  foo.h  main.cpp
